// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components TextInput android should renders correctly 1`] = `
Array [
  <ForwardRef(View)
    key="0"
    style={
      Object {
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <ForwardRef(Text)
      style={null}
    >
      My title
    </ForwardRef(Text)>
  </ForwardRef(View)>,
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    key="1"
    style={
      Object {
        "borderBottomWidth": 0.5,
        "borderColor": "#b5b5b5",
        "height": 40,
        "marginBottom": 20,
        "width": "100%",
      }
    }
    testID="input-undefined"
    underlineColorAndroid="#b5b5b5"
  />,
]
`;

exports[`Components TextInput android should renders correctly 2`] = `
Array [
  <ForwardRef(View)
    key="0"
    style={
      Object {
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <ForwardRef(Text)
      style={null}
    >
      My title
    </ForwardRef(Text)>
  </ForwardRef(View)>,
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    key="1"
    style={
      Object {
        "borderBottomWidth": 0.5,
        "borderColor": "#b5b5b5",
        "height": 40,
        "marginBottom": 20,
        "width": "100%",
      }
    }
    testID="input-undefined"
    underlineColorAndroid="#b5b5b5"
  />,
]
`;

exports[`Components TextInput ios should renders correctly 1`] = `
Array [
  <ForwardRef(View)
    key="0"
    style={
      Object {
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <ForwardRef(Text)
      style={null}
    >
      My title
    </ForwardRef(Text)>
  </ForwardRef(View)>,
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    key="1"
    style={
      Object {
        "borderBottomWidth": 0.5,
        "borderColor": "#b5b5b5",
        "height": 40,
        "marginBottom": 20,
        "width": "100%",
      }
    }
    testID="input-undefined"
    underlineColorAndroid="#b5b5b5"
  />,
]
`;

exports[`Components TextInput ios should renders correctly 2`] = `
Array [
  <ForwardRef(View)
    key="0"
    style={
      Object {
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <ForwardRef(Text)
      style={null}
    >
      My title
    </ForwardRef(Text)>
  </ForwardRef(View)>,
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    key="1"
    style={
      Object {
        "borderBottomWidth": 0.5,
        "borderColor": "#b5b5b5",
        "height": 40,
        "marginBottom": 20,
        "width": "100%",
      }
    }
    testID="input-undefined"
    underlineColorAndroid="#b5b5b5"
  />,
]
`;

exports[`Components TextInput ios should renders correctly 3`] = `
Array [
  <ForwardRef(View)
    key="0"
    style={
      Object {
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <ForwardRef(Text)
      style={null}
    >
      My title
    </ForwardRef(Text)>
    <ForwardRef(View)
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <ForwardRef(Text)
        style={null}
      >
         - 
      </ForwardRef(Text)>
      <ForwardRef(Text)
        style={
          Array [
            Object {
              "color": "red",
              "width": "100%",
            },
            null,
          ]
        }
        testID="input-error-undefined"
      >
        my-error
      </ForwardRef(Text)>
    </ForwardRef(View)>
  </ForwardRef(View)>,
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    key="1"
    style={
      Object {
        "borderBottomWidth": 0.5,
        "borderColor": "#b5b5b5",
        "height": 40,
        "marginBottom": 20,
        "width": "100%",
      }
    }
    testID="input-undefined"
    underlineColorAndroid="#b5b5b5"
  />,
]
`;

exports[`Components TextInput ios should renders correctly 4`] = `
Array [
  <ForwardRef(View)
    key="0"
    style={
      Object {
        "flexDirection": "row",
        "width": "100%",
      }
    }
  >
    <ForwardRef(Text)
      style={null}
    >
      My title
    </ForwardRef(Text)>
  </ForwardRef(View)>,
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    key="1"
    style={
      Object {
        "borderBottomWidth": 0.5,
        "borderColor": "#b5b5b5",
        "height": 40,
        "marginBottom": 20,
        "width": "100%",
      }
    }
    testID="input-undefined"
    underlineColorAndroid="#b5b5b5"
  />,
]
`;
